# fastapiExample

./: .env  .gitignore  main.py  pyproject.toml
src/: database.py  settings.py
