[tool.poetry]
name = "fastapiexample"
version = "0.1.0"
description = ""
authors = ["Azizjon <azizaliev2337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
